{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 184,
  "lineage": "0920a759-5fd4-54e3-3b3f-fd8bae0eb5a2",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058ec902b3168a42d",
            "domain": "vpc",
            "id": "eipalloc-058ec902b3168a42d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-223-150-100.compute-1.amazonaws.com",
            "public_ip": "44.223.150.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Created_on": "2024-04-17T12:00:21Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-EIP-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "EIP"
            },
            "tags_all": {
              "Created_on": "2024-04-17T12:00:21Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-EIP-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423338408:internet-gateway/igw-0d8acd8ff01b398b2",
            "id": "igw-0d8acd8ff01b398b2",
            "owner_id": "637423338408",
            "tags": {
              "Created_on": "2024-04-17T12:00:35Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-IGW-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "IGW"
            },
            "tags_all": {
              "Created_on": "2024-04-17T12:00:35Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-IGW-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "IGW"
            },
            "vpc_id": "vpc-0f857b5585ac815a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_pvt_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d8acd8ff01b398b2",
            "id": "r-rtb-059217f183724802e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-059217f183724802e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423338408:route-table/rtb-023b9a40e764695b8",
            "id": "rtb-023b9a40e764695b8",
            "owner_id": "637423338408",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Created_on": "2024-04-17T12:00:35Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-PVR-NAT-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "PVR-NAT"
            },
            "tags_all": {
              "Created_on": "2024-04-17T12:00:35Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-PVR-NAT-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "PVR-NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f857b5585ac815a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423338408:route-table/rtb-059217f183724802e",
            "id": "rtb-059217f183724802e",
            "owner_id": "637423338408",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Created_on": "2024-04-17T12:00:35Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-PUB-ROU-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "PUB-ROU"
            },
            "tags_all": {
              "Created_on": "2024-04-17T12:00:35Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-PUB-ROU-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "PUB-ROU"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f857b5585ac815a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423338408:route-table/rtb-07c9cb284bc6436bf",
            "id": "rtb-07c9cb284bc6436bf",
            "owner_id": "637423338408",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Created_on": "2024-04-17T12:00:35Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-PVT-ROU-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "PVT-ROU"
            },
            "tags_all": {
              "Created_on": "2024-04-17T12:00:35Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-PVT-ROU-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "PVT-ROU"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f857b5585ac815a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_pvt_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423338408:vpc/vpc-0f857b5585ac815a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0072a6b6c23b59b68",
            "default_route_table_id": "rtb-079d3d81018efdce2",
            "default_security_group_id": "sg-0e8769015cf401b1d",
            "dhcp_options_id": "dopt-09cb0a30b3225755d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f857b5585ac815a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079d3d81018efdce2",
            "owner_id": "637423338408",
            "tags": {
              "Created_on": "2024-04-17T12:00:21Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-VPC-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "VPC"
            },
            "tags_all": {
              "Created_on": "2024-04-17T12:00:21Z",
              "Env": "DEV",
              "Managed_by": "IAMOPS",
              "Name": "BTF-ASSESMENT-DEV-US-VPC-01",
              "Region": "us-east-1",
              "Region_code": "US",
              "Resource": "VPC"
            }
          }
        }
      ]
    }
  ]
}